--- a/bert4clssification.ipynb
+++ b/bert4clssification.ipynb
@@ -1510,12 +1510,12 @@
         "outputId": "c6290a2e-048b-4053-a54a-944fec0a46c7"
       },
       "source": [
-        "!wget https://raw.githubusercontent.com/shitkov/bert4classification/main/train.csv\n",
-        "!wget https://raw.githubusercontent.com/shitkov/bert4classification/main/valid.csv\n",
-        "!wget https://raw.githubusercontent.com/shitkov/bert4classification/main/test.csv\n",
-        "!wget https://raw.githubusercontent.com/shitkov/bert4classification/main/bert_classifier.py\n",
-        "!wget https://raw.githubusercontent.com/shitkov/bert4classification/main/bert_dataset.py\n",
-        "!wget https://raw.githubusercontent.com/shitkov/bert4classification/main/requirements.txt"
+        "!wget https://github.com/Sergey523/bert4classification-main/train.csv\n",
+        "!wget https://github.com/Sergey523/bert4classification-main/valid.csv\n",
+        "!wget https://github.com/Sergey523/bert4classification-main/test.csv\n",
+        "!wget https://github.com/Sergey523/bert4classification-main/bert_classifier.py\n",
+        "!wget https://github.com/Sergey523/bert4classification-main/bert_dataset.py\n",
+        "!wget https://github.com/Sergey523/bert4classification-main/requirements.txt"
       ],
       "execution_count": 1,
       "outputs": [
