--- a/bert4clssification.ipynb
+++ b/bert4clssification.ipynb
@@ -1510,19 +1510,19 @@
         "outputId": "c6290a2e-048b-4053-a54a-944fec0a46c7"
       },
       "source": [
-        "!wget https://github.com/Sergey523/bert4classification-main/blob/main/train.csv\n",
-        "!wget https://github.com/Sergey523/bert4classification-main/blob/main/valid.csv\n",
-        "!wget https://github.com/Sergey523/bert4classification-main/blob/main/test.csv\n",
-        "!wget https://github.com/Sergey523/bert4classification-main/blob/main/bert_classifier.py\n",
-	    "!wget https://github.com/Sergey523/bert4classification-main/blob/main/bert_dataset.py\n",
-        "!wget https://github.com/Sergey523/bert4classification-main/blob/main/requirements.txt"
+        "!wget https://raw.githubusercontent.com/Sergey523/bert4classification-main/3d0d3182838ffa295c0c6b9e8b781e0fab6d464b/train.csv\n",
+        "!wget https://raw.githubusercontent.com/Sergey523/bert4classification-main/3d0d3182838ffa295c0c6b9e8b781e0fab6d464b/valid.csv\n",
+        "!wget https://raw.githubusercontent.com/Sergey523/bert4classification-main/3d0d3182838ffa295c0c6b9e8b781e0fab6d464b/test.csv\n",
+        "!wget https://raw.githubusercontent.com/Sergey523/bert4classification-main/3d0d3182838ffa295c0c6b9e8b781e0fab6d464b/bert_classifier.py\n",
+	    "!wget https://raw.githubusercontent.com/Sergey523/bert4classification-main/3d0d3182838ffa295c0c6b9e8b781e0fab6d464b/bert_dataset.py\n",
+        "!wget https://raw.githubusercontent.com/Sergey523/bert4classification-main/3d0d3182838ffa295c0c6b9e8b781e0fab6d464b/requirements.txt"
       ],
       "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-07-05 14:35:37--  https://raw.githubusercontent.com/shitkov/bert4classification/main/train.csv\n",
+            "--2021-07-05 14:35:37--  https://github.com/Sergey523/bert4classification-main/blob/main/train.csv\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -1533,7 +1533,7 @@
             "\n",
             "2021-07-05 14:35:38 (199 MB/s) - ‘train.csv’ saved [9340188/9340188]\n",
             "\n",
-            "--2021-07-05 14:35:38--  https://raw.githubusercontent.com/shitkov/bert4classification/main/valid.csv\n",
+            "--2021-07-05 14:35:38--  https://github.com/Sergey523/bert4classification-main/blob/main/valid.csv\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -1544,7 +1544,7 @@
             "\n",
             "2021-07-05 14:35:38 (18.4 MB/s) - ‘valid.csv’ saved [518234/518234]\n",
             "\n",
-            "--2021-07-05 14:35:38--  https://raw.githubusercontent.com/shitkov/bert4classification/main/test.csv\n",
+            "--2021-07-05 14:35:38--  https://github.com/Sergey523/bert4classification-main/blob/main/test.csv\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -1555,7 +1555,7 @@
             "\n",
             "2021-07-05 14:35:38 (19.0 MB/s) - ‘test.csv’ saved [519871/519871]\n",
             "\n",
-            "--2021-07-05 14:35:38--  https://raw.githubusercontent.com/shitkov/bert4classification/main/bert_classifier.py\n",
+            "--2021-07-05 14:35:38--  https://github.com/Sergey523/bert4classification-main/blob/main/bert_classifier.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -1566,7 +1566,7 @@
             "\n",
             "2021-07-05 14:35:38 (82.8 MB/s) - ‘bert_classifier.py’ saved [5278/5278]\n",
             "\n",
-            "--2021-07-05 14:35:39--  https://raw.githubusercontent.com/shitkov/bert4classification/main/bert_dataset.py\n",
+            "--2021-07-05 14:35:39--  https://github.com/Sergey523/bert4classification-main/blob/main/bert_dataset.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
@@ -1577,7 +1577,7 @@
             "\n",
             "2021-07-05 14:35:39 (55.0 MB/s) - ‘bert_dataset.py’ saved [867/867]\n",
             "\n",
-            "--2021-07-05 14:35:39--  https://raw.githubusercontent.com/shitkov/bert4classification/main/requirements.txt\n",
+            "--2021-07-05 14:35:39--  https://github.com/Sergey523/bert4classification-main/blob/main/requirements.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
